--- a/Style/theme.scss
+++ b/Style/theme.scss
@@ -108,6 +108,8 @@ $spacers: map-merge(
   $spacers
 );
 
+$paragraph-margin-bottom: 0;
+
 // Fonts
 
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Noto+Sans+KR:wght@400;700&family=Noto+Serif&display=swap");
@@ -132,6 +134,11 @@ $h1-font-size: $font-size-base * 3.75;
 $h2-font-size: $font-size-base * 1.6875;
 $h3-font-size: $font-size-base * 1.25;
 $h4-font-size: $font-size-base * 1.25;
+
+$text-muted: $gray-400;
+
+$lead-font-size: $font-size-base * 1.25;
+$lead-font-weight: $font-weight-normal;
 
 // Links
 $link-color: theme-color("primary");
@@ -164,12 +171,18 @@ $border-radius-sm: $border-radius;
 
 $input-btn-padding-y: map-get($spacers, 2);
 $input-btn-padding-x: map-get($spacers, 4);
+$input-btn-font-size: $font-size-base;
+$input-btn-line-height: $line-height-base;
 
 $input-btn-padding-y-sm: map-get($spacers, 1);
 $input-btn-padding-x-sm: map-get($spacers, 4);
+$input-btn-font-size-sm: $font-size-base;
+$input-btn-line-height-sm: $line-height-base;
 
 $input-btn-padding-y-lg: map-get($spacers, 2);
 $input-btn-padding-x-lg: map-get($spacers, 6);
+$input-btn-font-size-lg: $font-size-base;
+$input-btn-line-height-lg: $line-height-base;
 
 //Buttons
 
@@ -177,20 +190,32 @@ $btn-font-weight: $font-weight-bold;
 
 $btn-padding-y: $input-btn-padding-y;
 $btn-padding-x: $input-btn-padding-x;
+$btn-font-size: $font-size-base;
+$btn-line-height: $line-height-base;
 
 $btn-padding-y-sm: $input-btn-padding-y-sm;
 $btn-padding-x-sm: $input-btn-padding-x-sm;
+$btn-font-size-sm: $font-size-base;
+$btn-line-height-sm: $line-height-base;
 
 $btn-padding-y-lg: $input-btn-padding-y-lg;
 $btn-padding-x-lg: $input-btn-padding-x-lg;
+$btn-font-size-lg: $font-size-base;
+$btn-line-height-lg: $line-height-base;
 
 //Inputs
 
 $input-padding-y: $input-btn-padding-y;
 $input-padding-x: $input-btn-padding-x;
+$input-font-size: $font-size-base;
+$input-line-height: $line-height-base;
 
 $input-padding-y-sm: $input-btn-padding-y-sm;
 $input-padding-x-sm: $input-btn-padding-x-sm;
+$input-font-size-sm: $font-size-base;
+$input-line-height-sm: $line-height-base;
 
 $input-padding-y-lg: $input-btn-padding-y-lg;
 $input-padding-x-lg: $input-btn-padding-x-lg;
+$input-font-size-lg: $font-size-base;
+$input-line-height-lg: $line-height-base;
