--- a/Style/style.scss
+++ b/Style/style.scss
@@ -64,3 +64,13 @@ textarea {
 .bg-danger p.lead {
   color: $white;
 }
+.background-image {
+  background-image: url("/images/background-landing.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+}
+
+.index-logo {
+  color: $white;
+}
