Created index, added log ins

--- a/Style/dist.css
+++ b/Style/dist.css
@@ -11546,4 +11546,12 @@ textarea {
   color: #fff;
 }
 
+.card-index {
+  margin-top: 150px;
+}
+
+.landing-text {
+  color: #000;
+}
+
 /*# sourceMappingURL=dist.css.map */
