--- a/Style/style.scss
+++ b/Style/style.scss
@@ -74,3 +74,17 @@ textarea {
 .index-logo {
   color: $white;
 }
+
+.index-button {
+  $primary: $blue;
+}
+
+// Index cards
+
+.card-index {
+  margin-top: 150px;
+}
+
+.landing-text {
+  color: $black;
+}
